Fixing translation strings for v0.19
- https://github.com/LemmyNet/lemmy-ui/issues/2842

--- a/translations/en.json
+++ b/translations/en.json
@@ -384,7 +384,7 @@
   "not_logged_in": "Not logged in.",
   "bio_length_overflow": "User bio cannot exceed 1000 characters.",
   "logged_in": "Logged in.",
-  "must_login": "You must <1>log in</1> or <2>register</2> to comment.",
+  "must_login": "You must <1>log in or register</1> to comment.",
   "site_saved": "Site Saved.",
   "community_ban": "You have been banned from this community.",
   "site_ban": "You have been banned from the site",
@@ -404,6 +404,7 @@
   "community_follower_already_exists": "Community follower already exists.",
   "community_user_already_banned": "Community user already banned.",
   "couldnt_create_post": "Couldn't create post.",
+  "post_title_too_long": "Post title too long.",
   "couldnt_like_post": "Couldn't like post.",
   "couldnt_find_post": "Couldn't find post.",
   "couldnt_get_posts": "Couldn't get posts",
@@ -414,6 +415,7 @@
   "parent_comment_not_in_post": "The parent comment belongs to another post.",
   "no_slurs": "No slurs.",
   "not_an_admin": "Not an admin.",
+  "not_top_admin": "Not the top admin.",
   "not_a_moderator": "Not a moderator.",
   "not_a_mod_or_admin": "Not a moderator or admin.",
   "site_already_exists": "Site already exists.",
