Adding fedilink string.

--- a/translations/en.json
+++ b/translations/en.json
@@ -81,6 +81,7 @@
   "sticky": "sticky",
   "unsticky": "unsticky",
   "link": "link",
+  "fedilink": "fedilink",
   "archive_link": "archive link",
   "bold": "bold",
   "italic": "italic",
