--- a/translations/en.json
+++ b/translations/en.json
@@ -683,7 +683,7 @@
   "publish_in_time": "Publish {{time}}",
   "scheduled_publish_time": "Scheduled Publish Time",
   "post_title_only": "Post Title Only",
-  "donation_dialog_title": "Please donate to support Lemmy development",
+  "donation_dialog_title": "Please donate to support Lemmy",
   "donation_dialog_message": "Lemmy is an open source project developed by volunteers and provided for free. Unlike commercial social media there is no advertising or tracking to earn money. Nevertheless the developers need money to pay for food and rent. So if you like to use Lemmy and want to see it continuously improved, please consider donating some money.",
   "donation_dialog_button_donate": "Donate",
   "donation_dialog_button_hide": "Hide for one year",
