--- a/translations/en.json
+++ b/translations/en.json
@@ -683,8 +683,8 @@
   "publish_in_time": "Publish {{time}}",
   "scheduled_publish_time": "Scheduled Publish Time",
   "post_title_only": "Post Title Only",
-  "donation_dialog_title": "Please donate to support Lemmy",
-  "donation_dialog_message": "Lemmy is an open source project developed by volunteers and provided for free. Unlike commercial social media there is no advertising or tracking to earn money. Nevertheless the developers need money to pay for food and rent. So if you like to use Lemmy and want to see it continuously improved, please consider donating some money.",
+  "donation_dialog_title": "Support Lemmy development",
+  "donation_dialog_message": "We are able to develop Lemmy as an open source platform free of tracking and ads thanks to the generosity of our users. Once a year we ask you to consider donating to support the volunteers that develop and maintain this platform. Financial security allows us to continue improving the project. If you’d like to make a one-time or recurring donation simply click the button below. Thank you for using Lemmy.\n\nNutomic and Dessalines, Lemmy Developers",
   "donation_dialog_button_donate": "Donate",
   "donation_dialog_button_hide": "Hide"
 }
