--- a/translations/en.json
+++ b/translations/en.json
@@ -56,7 +56,6 @@
   "general": "General",
   "technology": "Technology",
   "politics": "Politics",
-  "religion": "Religion",
   "lgbtq": "LGBTQ+",
   "art": "Art",
   "literature": "Literature",
@@ -86,19 +85,10 @@
   "sponsors": "Sponsors",
   "donate": "Donate",
   "docs": "Docs",
-  "code_of_conduct": "Code of Conduct",
-  "coc": "CoC",
   "join_title": "Lemmy - Browse servers",
   "lemmy_servers": "Lemmy <1>Servers</1>",
   "browse_instance": "Browse",
   "donate_title": "Lemmy - Donate",
-  "gold_pressed_latinum_sponsors_desc": "Gold Pressed Latinum Sponsors are those that pledged $500 monthly or more to Lemmy.",
-  "gold_sponsors_desc": "Gold Sponsors are those that pledged $100 monthly to Lemmy.",
-  "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 monthly to Lemmy.",
-  "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 monthly to Lemmy.",
-  "contributors": "Contributors",
-  "thanks_translators": "A special thanks to our translators: ",
-  "thanks_coders": "A special thanks to our coders: ",
   "instance_disclaimer": "You can access all content in the lemmyverse from any server, so it doesn't matter which one you choose.",
   "active_users": "Active Users",
   "servers": "Servers",
@@ -111,9 +101,8 @@
   "popular_instances": "Popular",
   "per_month": "{{formattedCount}} / month",
   "supporters": "{{formattedCount}} supporters",
-  "devs_funded": "{{formattedCount1}} / {{formattedCount2}} devs funded",
-  "based_on_salary": "Based on a median European €{{formattedCount}} software developer salary from developersalary.com",
-  "months_remaining": "{{formattedCount}} months remaining",
+  "percent_funded": "{{formattedCount}}% funded",
+  "based_on_salary": "Based on a median European €{{formattedCount}} software developer salary",
   "total_comments": "{{formattedCount}} total comments",
   "total_users": "{{formattedCount}} total users",
   "monthly_active_users": "{{formattedCount}} active users (users who have posted or commented in the last month)",
