--- a/translations/fa.json
+++ b/translations/fa.json
@@ -32,14 +32,11 @@
     "apps": "برنامه‌ها",
     "sponsors": "حامیان مالی",
     "docs": "مستندات",
-    "code_of_conduct": "مرام‌نامه",
-    "coc": "مرام‌نامه",
     "join_title": "لمی - کارسازها را مرور کنید",
     "lemmy_servers": "<1>کارسازهای</1> لمی",
     "choose_and_join": "از میان کارسازهای تاییدشدهٔ زیر، یکی را انتخاب و عضو شوید.",
     "sponsors_title": "لمی - حامیان مالی",
     "donate_to_lemmy": "به لمی اعانه بدهید",
-    "silver_sponsors_desc": "حامیان مالی نقره‌ای کسانی هستند که ۴۰ دلار به لمی کمک کرده‌اند.",
     "lemmy_title": "لمی - یک گردآورنده پیوند برای فدیورس",
     "run_a_server": "کارسازی را راه بیندازید",
     "follow_communities": "اجتماعات را <1>در هر جایی </1> از دنیا دنبال کنید",
@@ -49,8 +46,6 @@
     "notifications_including": "آگاهی‌ها شامل رایانامه.",
     "rss_feeds": "خوراک RSS و Atom برای <1>همه</1>، <2>مشترک‌شده</2>، <3>فهرست</3>، <4>کاربر</4> و <5>اجتماع</5>.",
     "apps_title": "لمی - برنامه‌ها و کتاب‌خانه‌ها",
-    "donate_desc": "لمی، یک نرم‌افزار آزاد و متن‌باز است و این یعنی هرگز به سمت تبلیغات، درآمدزایی و یا سرمایه‌گذاری خطرپذیر نمی‌رود. <1>اعانه‌های شما</1> به رشد مجموعه ناسودبر توسعه‌دهندگان لمی کمک کرده و اطمینان می‌بخشد که بتوانیم ویژگی‌های جدید اضافه کرده و لمی را بهبود ببخشیم.",
-    "general_sponsors_desc": "حامیان مالی عمومی کسانی هستند که بین ۱۰ تا ۳۹ دلار به لمی کمک کرده‌اند.",
     "blazing_fast_desc": "با کمک برخی سریع‌ترین ابزارها و چارچوب‌ها شامل <1>Rust</1> و <2>Actix</2> و <3>Diesel</3> و <4>Inferno</4> و <5>Typescript</5> ساخته شده است.",
     "support_lemmy": "حمایت از لمی",
     "mobile_apps_for_ios_and_android": "برنامه‌های همراه برای آی‌اواس و اندروید.",
@@ -84,7 +79,6 @@
     "general": "عمومی",
     "technology": "فناوری",
     "politics": "سیاست",
-    "religion": "دین",
     "art": "هنر",
     "literature": "ادبیات",
     "music": "موسیقی",
@@ -92,8 +86,5 @@
     "gaming": "بازی",
     "sports": "ورزش",
     "contact_us": "تماس <1>با ما</1>",
-    "donate_title": "لمی - اعانه",
-    "contributors": "مشارکت‌کنندگان",
-    "thanks_translators": "سپاسی ویژه از مترجمان‌مان: ",
-    "thanks_coders": "سپاسی ویژه از برنامه‌نویسان‌مان: "
+    "donate_title": "لمی - اعانه"
 }
