Add ko-fi (#33)

--- a/translations/en.json
+++ b/translations/en.json
@@ -81,6 +81,7 @@
   "support_on_patreon": "Patreon",
   "support_on_opencollective": "OpenCollective",
   "support_with_crypto": "Crypto",
+  "support_on_ko_fi": "Ko-fi",
   "apps": "Apps",
   "sponsors": "Sponsors",
   "donate": "Donate",
