--- a/translations/en.json
+++ b/translations/en.json
@@ -44,6 +44,7 @@
   "android": "Android",
   "web": "Web",
   "cli": "CLI",
+  "desktop": "Desktop",
   "topic": "Topic",
   "interests": "Interests",
   "languages": "Languages",
