--- a/translations/en.json
+++ b/translations/en.json
@@ -285,6 +285,7 @@
   "search": "Search",
   "overview": "Overview",
   "view": "View",
+  "upvoted": "Upvoted",
   "logout": "Logout",
   "login_sign_up": "Login / Sign up",
   "login": "Login",
