Revert "Clarify url blocklist strings (#170)"
This reverts commit 00978275c596125fc5f4664c512ea4793ced23ee.

--- a/translations/en.json
+++ b/translations/en.json
@@ -662,8 +662,8 @@
   "hide_hidden_posts": "Hide hidden posts",
   "post_hidden": "Post hidden",
   "post_unhidden": "Post unhidden",
-  "block_urls": "Block URLs by regex",
-  "block_urls_placeholder": "Put your blocked URLs here, one URL per line. Regular expressions also work, IE `*.example.com`. Make sure to use a delimiter like `\/\/rt.com` to match only `https://rt.com` and `http://rt.com`, but not `pixelart.com`.",
+  "block_urls": "Block URLs",
+  "block_urls_placeholder": "Put your blocked URLs here, one URL per line. Regex strings work also, IE *.example.com",
   "content_warning": "Content Warning",
   "sending_back_message": "Alright 👍. Sending you back in {{seconds}}.",
   "continue": "Continue",
