Translations for lemmy-ui 1.0.0

--- a/translations/en.json
+++ b/translations/en.json
@@ -447,7 +447,7 @@
   "block_leaving": "Are you sure you want to leave?",
   "what_is": "What is",
   "cake_day_title": "Cake day:",
-  "cake_day_info": "It's {{ creator_name }}'s cake day today!",
+  "cake_day_info": "It's {{creator_name}}'s cake day today!",
   "invalid_post_title": "Invalid post title",
   "invalid_url": "Invalid URL.",
   "play_captcha_audio": "Play Captcha Audio",
@@ -490,6 +490,7 @@
   "report_post": "Report post",
   "report_comment": "Report comment",
   "report_message": "Report message",
+  "report_community": "Report community",
   "fill_out_application": "To join this server, you need to fill out this application, and wait to be accepted.",
   "answer": "Answer",
   "verify_email": "Verify Email",
@@ -541,6 +542,7 @@
   "rate_limit_image": "Image",
   "rate_limit_comment": "Comment",
   "rate_limit_search": "Search",
+  "rate_limit_import_user_settings": "Import Settings",
   "rate_limit_header": "Rate Limit Options",
   "rate_limit_info": "Lemmy can limit requests per IP address for various actions. The Rate Limit field is how many times that IP address can perform that action, and Per Second is the number of seconds before the rate limit resets.",
   "per_second": "Per Second",
@@ -653,6 +655,8 @@
   "local_only_blurb": "Only users on this instance can interact with this community.",
   "public": "Public",
   "public_blurb": "This community can be federated to other instances and be posted/commented in by their users.",
+  "private": "Private",
+  "private_blurb": "Only approved users can interact with this community.",
   "banned_from_community_blurb": "<1>Banned:</1> You cannot post, comment, or vote in this community. However, you are still free to browse.",
   "private_message_form_user_matrix_blurb": "This user already has a matrix account you can message at <1>{{matrix_id}}</1>.",
   "hide_post": "Hide Post",
@@ -687,5 +691,36 @@
   "donation_dialog_title": "Support Lemmy development",
   "donation_dialog_message": "An open source project the size of Lemmy needs constant work to manage the project, implement new features and fix bugs. Dessalines and Nutomic work full-time on these tasks and more. As there is no advertising or tracking, all of our work is funded through donations. Even so there is barely enough time in the day, and no time for a second job. The only available option are user donations. To keep it viable donations need to reach a minimum of 5000€ per month, resulting in a modest salary of 2500€ per developer. If that goal is reached we can stop worrying about money, and fully focus on improving the software for the benefit of all users and instances. We especially rely on recurring donations to secure the long-term development and make Lemmy the best it can be.<br/><br/>If you want more information before donating, consider the comparison with Reddit. It began as startup funded by rich investors. The site is managed by corporate executives who over time have become more and more disconnected from normal users. Their main goal is to make investors happy and to make a profit. This leads to user-hostile decisions like firing the employee responsible for AMAs, blocking third-party apps and more. As Reddit is a single website under a single authority, it means all users need to follow the same rules, including ridiculous ones like censoring the name \"Luigi\".<br/><br/>Lemmy represents a new type of social media which is the complete opposite of Reddit. It is split across many different websites, each with its own rules, and managed by normal people who actually care about the users. There is no company and no profit motive. Much of the work is carried out by volunteer admins, mods and posters, who contribute out of enthusiasm and not for money. For users this is great as there is no advertising nor tracking, and no chance of takeover by a billionaire. Additionally there are no builtin political or ideological restrictions. You can use the software for any purpose you like, add your own restrictions or scrutinize its inner workings. Lemmy truly belongs to everyone.<br/><br/>Nutomic and Dessalines, Lemmy Developers",
   "donation_dialog_button_donate": "Donate",
-  "donation_dialog_button_hide": "Hide"
+  "donation_dialog_button_hide": "Hide",
+  "disable": "Disable",
+  "post_upvote_federation": "Post Upvote Federation",
+  "post_downvote_federation": "Post Downvote Federation",
+  "comment_upvote_federation": "Comment Upvote Federation",
+  "comment_downvote_federation": "Comment Downvote Federation",
+  "added_item_to_list": "Added {{item}} to {{list}}",
+  "removed_item_from_list": "Removed {{item}} from {{list}}",
+  "allowlist": "allowlist",
+  "blocklist": "blocklist",
+  "mark_page_as_read": "Mark Page As Read",
+  "image_uploaded": "Image uploaded",
+  "image_deleted": "Image deleted",
+  "subscribers_local": "Local Subscribers",
+  "active_daily": "Active Daily",
+  "active_weekly": "Active Weekly",
+  "active_monthly": "Active Monthly",
+  "active_six_months": "Active Six Months",
+  "name_asc": "Name Ascending",
+  "name_desc": "Name Descending",
+  "image": "Image",
+  "upload": "Upload",
+  "enable_private_messages": "Enable private messages",
+  "auto_mark_fetched_posts_as_read": "Automatically mark fetched post as read",
+  "upload_and_publish_image_title": "Upload this image?",
+  "upload_and_publish_image_desc": "The uploaded image will be distributed to federated instances without any further user interactions.",
+  "vote_show": "Show",
+  "vote_show_for_others": "Show for others",
+  "vote_hide": "Hide",
+  "multicommunities": "Multi Communities",
+  "liked": "Liked",
+  "none": "None"
 }
