Translations for lemmy-ui 1.0.0

--- a/translations/en.json
+++ b/translations/en.json
@@ -722,5 +722,6 @@
   "vote_hide": "Hide",
   "multicommunities": "Multi Communities",
   "liked": "Liked",
-  "none": "None"
+  "none": "None",
+  "back_to_first_page": "First page"
 }
