Adding some instance_persons blocks translations.

--- a/translations/en.json
+++ b/translations/en.json
@@ -460,11 +460,17 @@
   "blocked_instances": "Blocked Instances",
   "block_instance": "Block instance",
   "unblock_instance": "Unblock instance",
+  "blocked_all_communities_from_these_instances": "Blocked all communities from these instances",
+  "blocked_all_users_from_these_instances": "Blocked all users from these instances",
+  "blocked_all_communities_from": "Blocked all communities from {{instance}}",
+  "blocked_all_users_from": "Blocked all users from {{instance}}",
   "blocked_users": "Blocked Users",
   "block_user": "Block user",
   "blocked_communities": "Blocked Communities",
   "blocked": "Blocked",
+  "blocked_x": "Blocked {{item}}",
   "unblocked": "Unblocked",
+  "unblocked_x": "Unblocked {{item}}",
   "block_community": "Block community",
   "unblock_user": "Unblock user",
   "unblock_community": "Unblock community",
