Add icon to indicate new accounts

--- a/translations/en.json
+++ b/translations/en.json
@@ -738,5 +738,6 @@
   "show_user_vote_totals": "Show user vote totals",
   "vote_totals_for_user": "Vote totals for user",
   "note_for_user": "Note for user",
-  "create_user_note": "Create user note"
+  "create_user_note": "Create user note",
+  "new_account_label": "New account, created within the last 7 days"
 }
