Add read and hidden.

--- a/translations/en.json
+++ b/translations/en.json
@@ -276,6 +276,7 @@
   "inbox_for": "Inbox for <1>{{user}}</1>",
   "mark_all_as_read": "mark all as read",
   "type": "Type",
+  "read": "Read",
   "unread": "Unread",
   "replies": "Replies",
   "x_more_replies": "{{formattedCount}} more reply",
@@ -675,6 +676,7 @@
   "hide_hidden_posts": "Hide hidden posts",
   "post_hidden": "Post hidden",
   "post_unhidden": "Post unhidden",
+  "hidden": "Hidden",
   "block_urls": "Block URLs",
   "block_urls_placeholder": "Put your blocked URLs here, one URL per line. Regex strings work also, IE *.example.com",
   "content_warning": "Content Warning",
