--- a/translations/en.json
+++ b/translations/en.json
@@ -748,5 +748,6 @@
   "notification_mode_all_posts": "All posts",
   "notification_mode_all_comments": "All comments",
   "notification_mode_replies_and_mentions": "Replies and mentions (default)",
-  "notification_mode_mute": "Mute"
+  "notification_mode_mute": "Mute",
+  "notifications_updated": "Notifications updated"
 }
