--- a/translations/en.json
+++ b/translations/en.json
@@ -33,6 +33,7 @@
   "create_community": "Create Community",
   "remove_community": "Remove Community",
   "explore_communities": "Explore Communities",
+  "visit_random_community": "Visit a random community",
   "subscribed_to_communities": "Subscribed to <1>communities</1>",
   "trending_communities": "Trending <1>communities</1>",
   "trending": "Trending",
