--- a/translations/en.json
+++ b/translations/en.json
@@ -751,5 +751,6 @@
   "notification_mode_replies_and_mentions": "Replies and mentions (default)",
   "notification_mode_mute": "Mute",
   "notifications_updated": "Notifications updated",
-  "unknown_language": "Unknown language"
+  "unknown_language": "Unknown language",
+  "registered_date_title": "Registered"
 }
