Add post time range strings.

--- a/translations/en.json
+++ b/translations/en.json
@@ -259,6 +259,7 @@
   "most_comments": "Most Comments",
   "new_comments": "New Comments",
   "day": "day",
+  "days": "days",
   "week": "week",
   "month": "month",
   "number_of_months": "{{formattedCount}} month",
@@ -447,6 +448,7 @@
   "no_private_message_edit_allowed": "Not allowed to edit private message.",
   "couldnt_update_private_message": "Couldn't update private message.",
   "time": "Time",
+  "post_time_range": "Show posts from last",
   "action": "Action",
   "emoji_picker": "Emoji Picker",
   "block_leaving": "Are you sure you want to leave?",
