--- a/translations/en.json
+++ b/translations/en.json
@@ -259,7 +259,7 @@
   "most_comments": "Most Comments",
   "new_comments": "New Comments",
   "day": "day",
-  "days": "days",
+  "days": "Days",
   "week": "week",
   "month": "month",
   "number_of_months": "{{formattedCount}} month",
