Adding a few more.

--- a/translations/en.json
+++ b/translations/en.json
@@ -258,10 +258,16 @@
   "top_all": "Top All Time",
   "most_comments": "Most Comments",
   "new_comments": "New Comments",
+  "seconds": "seconds",
   "day": "day",
-  "days": "Days",
+  "days": "days",
   "week": "week",
+  "weeks": "weeks",
   "month": "month",
+  "months": "months",
+  "years": "years",
+  "time_interval": "Time interval",
+  "time_unit": "Time unit",
   "number_of_months": "{{formattedCount}} month",
   "number_of_months_plural": "{{formattedCount}} months",
   "number_of_days": "Number of days",
