--- a/translations/en.json
+++ b/translations/en.json
@@ -261,6 +261,7 @@
   "seconds": "seconds",
   "day": "day",
   "days": "days",
+  "minutes": "minutes",
   "week": "week",
   "weeks": "weeks",
   "month": "month",
