--- a/translations/en.json
+++ b/translations/en.json
@@ -262,6 +262,7 @@
   "day": "day",
   "days": "days",
   "minutes": "minutes",
+  "hours": "hours",
   "week": "week",
   "weeks": "weeks",
   "month": "month",
