Adding lock comment strings

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,12 +1,14 @@
 {
   "post": "post",
-  "remove_post": "Remove Post",
+  "remove_post": "Remove post",
   "removed_post": "Removed post",
   "restore_post": "Restore post",
   "restored_post": "Restored post",
-  "no_posts": "No Posts.",
+  "lock_post": "Lock post",
+  "unlock_post": "Unlock post",
+  "no_posts": "No posts.",
   "create_a_post": "Create a post",
-  "create_post": "Create Post",
+  "create_post": "Create post",
   "denied": "Denied",
   "number_of_posts": "{{formattedCount}} Post",
   "number_of_posts_plural": "{{formattedCount}} Posts",
@@ -24,6 +26,8 @@
   "remove_content": "Remove Content",
   "restore_comment": "Restore comment",
   "restored_comment": "Restored comment",
+  "lock_comment": "Lock comment",
+  "unlock_comment": "Unlock comment",
   "remove_content_more": "Remove Posts, Comments, and Communities",
   "comment_here": "Type here to comment...",
   "communities": "Communities",
@@ -139,6 +143,8 @@
   "removed": "Removed by mod",
   "locked": "Locked",
   "unlocked": "Unlocked",
+  "locking": "Locking",
+  "unlocking": "Unlocking",
   "locked_post": "Locked post",
   "locked_post_comment_placeholder": "This post is locked, you can not comment.",
   "unlocked_post": "Unlocked post",
