changing to content

--- a/translations/en.json
+++ b/translations/en.json
@@ -146,7 +146,7 @@
   "locking": "Locking",
   "unlocking": "Unlocking",
   "locked_post": "Locked post",
-  "locked_post_comment_placeholder": "This post is locked, you can not comment.",
+  "locked_post_comment_placeholder": "This content is locked, you can not comment.",
   "unlocked_post": "Unlocked post",
   "loading": "Loading",
   "stickied": "stickied",
