--- a/translations/en.json
+++ b/translations/en.json
@@ -245,29 +245,30 @@
   "strong": "Strong",
   "new": "New",
   "old": "Old",
-  "top_hour": "Top Hour",
-  "top_six_hours": "Top Six Hours",
-  "top_twelve_hours": "Top Twelve Hours",
-  "top_day": "Top Day",
-  "top_week": "Top Week",
-  "top_month": "Top Month",
-  "top_three_months": "Top Three Months",
-  "top_six_months": "Top Six Months",
-  "top_nine_months": "Top Nine Months",
-  "top_year": "Top Year",
-  "top_all": "Top All Time",
-  "most_comments": "Most Comments",
-  "new_comments": "New Comments",
-  "seconds": "seconds",
-  "day": "day",
-  "days": "days",
-  "minutes": "minutes",
-  "hours": "hours",
-  "week": "week",
-  "weeks": "weeks",
-  "month": "month",
-  "months": "months",
-  "years": "years",
+  "one_hour": "One hour",
+  "six_hours": "Six hours",
+  "twelve_hours": "Twelve hours",
+  "one_day": "One day",
+  "one_week": "One week",
+  "one_month": "One month",
+  "three_months": "Three months",
+  "six_months": "Six months",
+  "nine_months": "Nine months",
+  "one_year": "One year",
+  "all_time": "All time",
+  "custom_time": "Custom time interval",
+  "most_comments": "Most comments",
+  "new_comments": "New comments",
+  "seconds": "Seconds",
+  "day": "Day",
+  "days": "Days",
+  "minutes": "Minutes",
+  "hours": "Hours",
+  "week": "Week",
+  "weeks": "Weeks",
+  "month": "Month",
+  "months": "Months",
+  "years": "Years",
   "time_interval": "Time interval",
   "time_unit": "Time unit",
   "number_of_months": "{{formattedCount}} month",
