--- a/translations/en.json
+++ b/translations/en.json
@@ -201,8 +201,8 @@
   "purge_success": "The item has been successfully purged.",
   "save": "Save",
   "unsave": "Unsave",
-  "create": "create",
-  "creator": "creator",
+  "create": "Create",
+  "creator": "Creator",
   "username": "Username",
   "email_or_username": "Email or Username",
   "number_of_users": "{{formattedCount}} user",
