Add tagline actions.

--- a/translations/en.json
+++ b/translations/en.json
@@ -578,6 +578,9 @@
   "per_second": "Per Second",
   "taglines": "Taglines",
   "add_tagline": "Add Tagline",
+  "tagline_updated": "Tagline updated",
+  "tagline_deleted": "Tagline deleted",
+  "tagline_created": "Tagline created",
   "featured": "Featured",
   "featured_in_local": "Featured in Local",
   "featured_in_community": "Featured in Community",
