Adding custom emojis actions

--- a/translations/en.json
+++ b/translations/en.json
@@ -594,6 +594,9 @@
   "saved_emoji": "Saved Emoji",
   "custom_emoji_save_validation": "All fields must be filled in and shortcode can't be duplicated.",
   "add_custom_emoji": "Add Custom Emoji",
+  "custom_emoji_updated": "Custom emoji updated",
+  "custom_emoji_deleted": "Custom emoji deleted",
+  "custom_emoji_created": "Custom emoji created",
   "column_keywords": "Keywords (Space Separated)",
   "column_alttext": "Alt Text",
   "column_imageurl": "Image Url",
