--- a/translations/en.json
+++ b/translations/en.json
@@ -578,6 +578,9 @@
   "per_second": "Per Second",
   "taglines": "Taglines",
   "add_tagline": "Add Tagline",
+  "tagline_updated": "Tagline updated",
+  "tagline_deleted": "Tagline deleted",
+  "tagline_created": "Tagline created",
   "featured": "Featured",
   "featured_in_local": "Featured in Local",
   "featured_in_community": "Featured in Community",
@@ -591,6 +594,9 @@
   "saved_emoji": "Saved Emoji",
   "custom_emoji_save_validation": "All fields must be filled in and shortcode can't be duplicated.",
   "add_custom_emoji": "Add Custom Emoji",
+  "custom_emoji_updated": "Custom emoji updated",
+  "custom_emoji_deleted": "Custom emoji deleted",
+  "custom_emoji_created": "Custom emoji created",
   "column_keywords": "Keywords (Space Separated)",
   "column_alttext": "Alt Text",
   "column_imageurl": "Image Url",
