Correct names for instance default theme

--- a/translations/en.json
+++ b/translations/en.json
@@ -351,8 +351,9 @@
   "language_plural": "Languages",
   "language_select_placeholder": "Select language",
   "undetermined_language_warning": "Warning: If you deselect Undetermined, you will not see most content.",
-  "browser_default": "Browser Default",
-  "browser_default_compact": "Browser Default Compact",
+  "language_browser_default": "Browser Default",
+  "theme_instance_default": "Instance default",
+  "theme_instance_default_compact": "Instance default (compact)",
   "downvotes_disabled": "Downvotes disabled",
   "enable_downvotes": "Enable Downvotes",
   "upvote": "Upvote",
