Adding failure lines for tagline and custom_emoji updates.

--- a/translations/en.json
+++ b/translations/en.json
@@ -582,6 +582,9 @@
   "tagline_updated": "Tagline updated",
   "tagline_deleted": "Tagline deleted",
   "tagline_created": "Tagline created",
+  "couldnt_create_tagline": "Couldn't create tagline",
+  "couldnt_update_tagline": "Couldn't update tagline",
+  "couldnt_delete_tagline": "Couldn't delete tagline",
   "featured": "Featured",
   "featured_in_local": "Featured in Local",
   "featured_in_community": "Featured in Community",
@@ -598,6 +601,9 @@
   "custom_emoji_updated": "Custom emoji updated",
   "custom_emoji_deleted": "Custom emoji deleted",
   "custom_emoji_created": "Custom emoji created",
+  "couldnt_create_custom_emoji": "Couldn't create custom emoji",
+  "couldnt_update_custom_emoji": "Couldn't update custom emoji",
+  "couldnt_delete_custom_emoji": "Couldn't delete custom emoji",
   "column_keywords": "Keywords (Space Separated)",
   "column_alttext": "Alt Text",
   "column_imageurl": "Image Url",
