Adding keyword blocks.

--- a/translations/en.json
+++ b/translations/en.json
@@ -497,6 +497,9 @@
   "unblock_user": "Unblock user",
   "unblock_community": "Unblock community",
   "blocks": "Blocks",
+  "keyword_blocks": "Keyword blocks",
+  "keyword_blocks_placeholder": "Enter any keywords you'd like to block from your feed, separated by commas.",
+  "block_keyword_too_short": "Keyword block too short.",
   "person_block": "This user has blocked you.",
   "none_found": "None found.",
   "report_reason_required": "Report reason required.",
