--- a/translations/en.json
+++ b/translations/en.json
@@ -96,7 +96,9 @@
   "strikethrough": "strikethrough",
   "quote": "quote",
   "spoiler": "spoiler",
-  "list": "list",
+  "list": "List",
+  "card": "Card",
+  "small_card": "Small card",
   "mod": "mod",
   "mods": "mods",
   "distinguish": "Speak as moderator",
@@ -234,6 +236,7 @@
   "post_sort_type": "Post sort type",
   "comment_sort_type": "Comment sort type",
   "listing_type": "Listing type",
+  "listing_mode": "Listing mode",
   "hot": "Hot",
   "active": "Active",
   "active_users_in_the_last_day": "{{formattedCount}} active user in the last day",
